--- a/AlgoritmosGeneticos/AlgoritmosGeneticos.csproj
+++ b/AlgoritmosGeneticos/AlgoritmosGeneticos.csproj
@@ -53,6 +53,9 @@
     <Compile Include="Domain\Acertijo.cs" />
     <Compile Include="Domain\Modelo.cs" />
     <Compile Include="Domain\ModeloBuilder.cs" />
+    <Compile Include="Domain\Pistas\Pista4.cs" />
+    <Compile Include="Domain\Pistas\Pista3.cs" />
+    <Compile Include="Domain\Pistas\Pista2.cs" />
     <Compile Include="Domain\Pistas\Pista.cs" />
     <Compile Include="Domain\Pistas\Pista1.cs" />
     <Compile Include="Helpers\AdapterModelo.cs" />
