--- a/AlgoritmosGeneticos/AlgoritmosGeneticos.csproj
+++ b/AlgoritmosGeneticos/AlgoritmosGeneticos.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Domain\Acertijo.cs" />
     <Compile Include="Domain\Modelo.cs" />
     <Compile Include="Domain\ModeloBuilder.cs" />
+    <Compile Include="Domain\Pistas\Pista10.cs" />
     <Compile Include="Domain\Pistas\Pista13.cs" />
     <Compile Include="Domain\Pistas\Pista4.cs" />
     <Compile Include="Domain\Pistas\Pista3.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Domain\Pistas\Pista6.cs" />
     <Compile Include="Domain\Pistas\Pista7.cs" />
     <Compile Include="Domain\Pistas\Pista8.cs" />
+    <Compile Include="Domain\Pistas\Pista9.cs" />
     <Compile Include="Helpers\AdapterModelo.cs" />
     <Compile Include="Helpers\GAFRunner.cs" />
     <Compile Include="Helpers\Logger.cs" />
