--- a/AlgoritmosGeneticos/AlgoritmosGeneticos.csproj
+++ b/AlgoritmosGeneticos/AlgoritmosGeneticos.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Domain\Acertijo.cs" />
     <Compile Include="Domain\Modelo.cs" />
     <Compile Include="Domain\ModeloBuilder.cs" />
+    <Compile Include="Domain\Pistas\Pista11.cs" />
     <Compile Include="Domain\Pistas\Pista12.cs" />
     <Compile Include="Domain\Pistas\Pista13.cs" />
     <Compile Include="Domain\Pistas\Pista4.cs" />
