--- a/UnitTestProject1/UnitTestProject.csproj
+++ b/UnitTestProject1/UnitTestProject.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="UnitTestPista10.cs" />
     <Compile Include="UnitTestPista12.cs" />
     <Compile Include="UnitTestPista13.cs" />
     <Compile Include="UnitTestPista8.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="UnitTestPista2.cs" />
     <Compile Include="UnitTestPista1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTestPista9.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AlgoritmosGeneticos\AlgoritmosGeneticos.csproj">
